Pokemon component expansion
This will add some expansion for the pokemon component,
also adds 4 new pokemon's subcomponents, one for each
new feature.

Moves
- this adds all the move list of the pokemon, and a
  side effect thats loads the move description.

Stats
- this show all stats and pokemon description

Types
- this list all the types of the pokemon

Evolution
- this mount a chain of all pokemon evolutions
  of this species.

This also adds css for the component and a free font
to make it look more retro! :)

Also adds the react-thunk to chain the load evolutions
actions.

--- a/src/components/pokemon.component.scss
+++ b/src/components/pokemon.component.scss
@@ -29,4 +29,26 @@
       }
     }
   }
+  .types {
+    margin: 4px 0px;
+    .type {
+      background-color: rgb(150, 151, 140);
+      border-radius:  3px;
+      padding: 2px 4px;
+      margin: 2px;
+    }
+  }
+  .stats, .moves, .evolutions, .description {
+    margin: 4px;
+    text-align: justify;
+  }
+  .stats{
+    span{
+      display: block;
+      width: 100%;
+      i {
+        float: right;
+      }
+    }
+  }
 }
