--- a/src/components/block.component.scss
+++ b/src/components/block.component.scss
@@ -1,23 +1,23 @@
-
-.block{
-  background-color: #D2D5C2;
+.block {
+  background-color: #d2d5c2;
   border-radius: 2px;
   display: block;
-  font-family: 'Visitor';
+  font-family: "Visitor";
   box-sizing: border-box;
   padding: 8px;
   border-top: 2px solid rgb(196, 197, 185);
   border-bottom: 2px solid rgb(150, 151, 140);
   position: relative;
-  
-  &:before, &:after {
-    content: '';
+
+  &:before,
+  &:after {
+    content: "";
     top: 0;
     width: 2px;
     height: 100%;
     position: absolute;
   }
-  
+
   &:before {
     left: -2px;
     background-color: rgb(196, 197, 185);
@@ -29,9 +29,8 @@
   }
 }
 
-
 .list.block {
-  background-color: #32CB65;
+  background-color: #32cb65;
   border-top: 2px solid rgb(78, 230, 129);
   border-bottom: 2px solid rgb(30, 90, 50);
   padding: inherit;
@@ -39,19 +38,19 @@
   padding: 0px;
   list-style: none;
   box-sizing: border-box;
-  
-    ul {
-      margin: 0px;
-      padding: 0px;
-      list-style: none;
-      box-sizing: border-box;
-    }
 
-  li{
+  ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    box-sizing: border-box;
+  }
+
+  li {
     box-sizing: border-box;
     width: 100%;
     &:hover {
-      background-color: rgba(0,0,0,0.3);
+      background-color: rgba(0, 0, 0, 0.3);
     }
   }
   &:before {
@@ -63,8 +62,9 @@
   }
 }
 
-select.block, input.block {
-  background-color: #FFF;
+select.block,
+input.block {
+  background-color: #fff;
   border-top: 2px solid rgb(196, 196, 196);
   border-bottom: 2px solid rgb(39, 39, 39);
   font-size: 18px;
