--- a/src/components/list.component.scss
+++ b/src/components/list.component.scss
@@ -6,12 +6,12 @@
   border-radius: 3px;
   height: 100%;
   max-height: 100vh;
-  li { 
+  li {
     margin: 0px;
     padding: 8px;
     width: 100%;
     button {
-      font-family: 'Visitor';
+      font-family: "Visitor";
       background: none;
       font-size: 20px;
       width: 100%;
@@ -23,7 +23,6 @@
     }
   }
 }
-
 
 @media only screen and (max-width: 590px) {
   .list {
