--- a/src/components/pokemon.component.scss
+++ b/src/components/pokemon.component.scss
@@ -4,33 +4,34 @@
   display: flex;
   text-align: left;
   flex-direction: column;
-  p{
+  p {
     color: #333;
   }
-  .title{ 
+  .title {
     margin: 4px;
     text-transform: capitalize;
   }
   .preview {
-    width:  100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    .sprite, .physics  {
+    .sprite,
+    .physics {
       margin: 4px;
     }
     .sprite {
-      img{
+      img {
         width: 100px;
         height: 100px;
       }
     }
 
     .physics {
-      width:  100%;
+      width: 100%;
 
       span {
         display: block;
-        width:  100%;
+        width: 100%;
       }
     }
   }
@@ -38,17 +39,20 @@
     margin: 4px 0px;
     .type {
       background-color: rgb(150, 151, 140);
-      border-radius:  3px;
+      border-radius: 3px;
       padding: 2px 4px;
       margin: 2px;
     }
   }
-  .stats, .moves, .evolutions, .description {
+  .stats,
+  .moves,
+  .evolutions,
+  .description {
     margin: 4px;
     text-align: justify;
   }
-  .stats{
-    span{
+  .stats {
+    span {
       display: block;
       width: 100%;
       i {
